igt@xe_module_load@reload-no-display - fail - Test assertion failure function load_and_check_xe, Failed assertion: error == 0, error: -17 != 0
Starting subtest: reload-no-display
(xe_module_load:3453) igt_kmod-WARNING: Could not unload mei_gsc
(xe_module_load:3453) CRITICAL: Test assertion failure function load_and_check_xe, file ../../../usr/src/igt-gpu-tools/tests/intel/xe_module_load.c:86:
(xe_module_load:3453) CRITICAL: Failed assertion: error == 0
(xe_module_load:3453) CRITICAL: error: -17 != 0
Subtest reload-no-display failed.
**** DEBUG ****
(xe_module_load:3453) igt_kmod-INFO: nls_iso8859_1
(xe_module_load:3453) igt_kmod-INFO: crypto_simd aesni_intel
(xe_module_load:3453) igt_kmod-INFO: snd_soc_acpi snd_soc_acpi_intel_match,snd_sof_intel_hda_generic
(xe_module_load:3453) igt_kmod-INFO: cryptd crypto_simd,ghash_clmulni_intel
(xe_module_load:3453) igt_kmod-INFO: snd_intel_dspcfg snd_sof,snd_sof_intel_hda_common,snd_sof_intel_hda_generic
(xe_module_load:3453) igt_kmod-INFO: rapl
(xe_module_load:3453) igt_kmod-INFO: snd_hda_codec snd_hda_codec_hdmi,snd_soc_hdac_hda,snd_sof_intel_hda
(xe_module_load:3453) igt_kmod-INFO: snd_hwdep snd_hda_codec
(xe_module_load:3453) igt_kmod-INFO: usbhid
(xe_module_load:3453) igt_kmod-INFO: snd_sof_intel_hda_mlink snd_sof_intel_hda_common,snd_sof_intel_hda_generic
(xe_module_load:3453) igt_kmod-INFO: intel_cstate
(xe_module_load:3453) igt_kmod-INFO: snd_hda_ext_core snd_sof_intel_hda_common,snd_soc_hdac_hda,snd_sof_intel_hda_mlink,snd_sof_intel_hda
(xe_module_load:3453) igt_kmod-INFO: hid usbhid,hid_generic
(xe_module_load:3453) igt_kmod-INFO: cmdlinepart
(xe_module_load:3453) igt_kmod-INFO: snd_hda_core snd_hda_codec_hdmi,snd_hda_ext_core,snd_hda_codec,snd_sof_intel_hda_common,snd_soc_hdac_hda,snd_sof_intel_hda
(xe_module_load:3453) igt_kmod-INFO: spi_nor